Additional dark mode fixes
git-svn-id: file:///home/svn/DVA2006@18007 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/legacy/cooler.css
+++ b/static/css/legacy/cooler.css
@@ -131,7 +131,11 @@ blockquote cite {
 		border: 1px dashed #7a7aff;
 	}
 	
-	*.postEdit :link, *.postEdit :visited, *.postEdit :hover {
+	*.postEdit :link, *.postEdit :visited {
 		color: #efefff;
+	}
+	
+	*.postInfo :link, *.postInfo :visited {	
+		color: #6080e0;
 	}
 }
